2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* Mono.TextEditor.csproj: Added file to project.

2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViKeyNotation.cs: Implement equality
	  members on ViKey.

	* Mono.TextEditor.Vi/ViCommandBuilder.cs: Parse motions,
	  multipliers, registers.

2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViKeyNotation.cs:
	* Mono.TextEditor.Vi/ViEditorContext.cs:
	* Mono.TextEditor.Vi/ViCommandBuilder.cs: New vi command
	  builder architecture (incomplete)

2010-06-15  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: made some functions
	  public.

2010-06-15  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/GutterMargin.cs: Fixed a bug where the
	  gutter margin with isn't calculated correctly.

2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor.Vi/ViKeyNotation.cs: Really fix the windows
	  build.

2010-06-14  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.TextEditor.Vi/ViKeyNotation.cs: Fix windows build.

2010-06-14  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/TextEditorData.cs: Fixed 'Bug 609674 -
	  Selection changes on middle-click after selection'.

2010-06-14  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/DeleteActions.cs: Fixed 'Bug 613770 -
	  Backspace inconsistently deletes entire lines when using
	  "virtual spaces"'.

2010-06-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViKeyNotation.cs: Use explicit
	  dictionaries instead of switches, to make code more
	  readable.

2010-06-11  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViKeyNotation.cs: Added vi key notation
	  parsing and stringifying.

	* Mono.TextEditor.Vi/ViCommandBuilder.cs: Added vi command
	  builder stub.

	* Makefile.am:
	* Mono.TextEditor.csproj: Added files.
