@@ -1,5 +1,13 @@
 2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* Mono.TextEditor.Vi/ViKeyNotation.cs: Remove full ctor that
+	  could create invalid keys.
+
+	* Mono.TextEditor.Vi/ViCommandBuilder.cs: Add some more action
+	  maps.
+
+2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* Makefile.am:
 	* Mono.TextEditor.csproj: Added file to project.
 
